--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" href="/images/Blackfav.png">
+    <link rel="icon" href="/images/BBlogo.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>BlackBottom Consulting</title>
   </head>
