--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" href="/images/BBfav1.png">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>BlackBottom Consulting</title>
   </head>
